# react-flask

./: .tool-versions
backend/: index.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/: App.js
