[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Kei Nakayama <kei.of.nakayama@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7"
flask = "^2.2.2"
flask-cors = "^3.0.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

